Refactor code quality improvements
- Use Math.clamp() instead of nested Math.min/max for cleaner range validation
- Remove unused Locale import from Pageables
- Consolidate similar test cases into parameterized tests for better maintainability
- Replace assertThat(size()).isLessThanOrEqualTo() with hasSizeLessThanOrEqualTo()

Test improvements:
- Combine 4 single-result search tests into shouldSearchAndFindExactMatch
- Combine 2 wildcard escaping tests into shouldEscapeWildcardCharacters
- Reduces code duplication while maintaining test coverage

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>